--- a/lstm-rnn-example-parent/lstm-rnn-example/pom.xml
+++ b/lstm-rnn-example-parent/lstm-rnn-example/pom.xml
@@ -14,9 +14,40 @@
 
     <properties>
         <java.version>1.8</java.version>
+
+        <dl4j.version>0.9.1</dl4j.version>
+
+        <nd4j.backend>nd4j-native-platform</nd4j.backend>
+        <nd4j.version>0.9.1</nd4j.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.nd4j</groupId>
+                <artifactId>nd4j-native-platform</artifactId>
+                <version>${nd4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.nd4j</groupId>
+                <artifactId>nd4j-cuda-7.5-platform</artifactId>
+                <version>${nd4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.nd4j</groupId>
+                <artifactId>nd4j-cuda-8.0-platform</artifactId>
+                <version>${nd4j.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
+    <!-- ND4J backend. You need one in every DL4J project. Normally define artifactId as either "nd4j-native-platform" or "nd4j-cuda-7.5-platform" -->
+    <dependency>
+        <groupId>org.nd4j</groupId>
+        <artifactId>${nd4j.backend}</artifactId>
+        <version>${nd4j.version}</version>
+    </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -26,6 +57,25 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <!-- Core DL4J functionality -->
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-nlp</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-zoo</artifactId>
+            <version>${dl4j.version}</version>
         </dependency>
 
         <dependency>
