--- a/lstm-rnn-example-parent/pom.xml
+++ b/lstm-rnn-example-parent/pom.xml
@@ -19,19 +19,41 @@
 
 	<properties>
 		<spring-cloud.version>Brixton.RELEASE</spring-cloud.version>
+
+		<nd4j.backend>nd4j-native-platform</nd4j.backend>
+
+		<shadedClassifier>bin</shadedClassifier>
+
 		<java.version>1.8</java.version>
+		<nd4j.version>1.0.0-beta</nd4j.version>
+		<dl4j.version>1.0.0-beta</dl4j.version>
+		<datavec.version>1.0.0-beta</datavec.version>
+		<arbiter.version>1.0.0-beta</arbiter.version>
+		<rl4j.version>1.0.0-beta</rl4j.version>
+		<dl4j.spark.version>1.0.0-beta_spark_1</dl4j.spark.version>
+		<datavec.spark.version>1.0.0-beta_spark_1</datavec.spark.version>
+		<scala.binary.version>2.11</scala.binary.version>
+
+		<hadoop.version>2.2.0</hadoop.version>  <!-- Hadoop version used by Spark 1.6.3 and 2.2.1 (and likely others) -->
+		<guava.version>19.0</guava.version>
+		<logback.version>1.1.7</logback.version>
+		<jfreechart.version>1.0.13</jfreechart.version>
+		<jcommon.version>1.0.23</jcommon.version>
+		<jackson.version>2.6.6</jackson.version>
+		<aws.sdk.version>1.11.109</aws.sdk.version>
+		<jcommander.version>1.27</jcommander.version>
+
+		<maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+		<maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
+		<exec-maven-plugin.version>1.4.0</exec-maven-plugin.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<dependencies>
+	</dependencies>
 	
 </project>
